Nav bar no longer overlaps page contents

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -3,6 +3,7 @@ body {
     margin: 0;
     font-family: sans-serif;
     height: 100%;
+    padding-top: 100px;
 }
 /* ----- End General ----- */
 
